--- a/frontEnd/vite-project/src/index.css
+++ b/frontEnd/vite-project/src/index.css
@@ -1,7 +1,23 @@
-@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
-h1 {
-  font-family: "Press Start 2P", system-ui;
+@import url("https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap");
+.text {
+  font-family: "Pixelify Sans", sans-serif;
+  color: white;
 }
-h2 {
-  font-family: "Press Start 2P", system-ui;
+#songName {
+  font-size: 24px;
+  position: absolute;
+  top: -15px;
+  left: 10px;
+}
+#artist {
+  font-size: 16px;
+  position: absolute;
+  top: 17px;
+  left: 10px;
+}
+#time {
+  font-size: 22px;
+  position: absolute;
+  top: -4px;
+  right: 10px;
 }
