--- a/frontEnd/vite-project/src/index.css
+++ b/frontEnd/vite-project/src/index.css
@@ -1,23 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap");
+@font-face {
+  font-family: "Pixeloid Sans";
+  src: url("../assets/PixeloidSans-mLxMm\ copy.ttf") format("truetype");
+}
 .text {
-  font-family: "Pixelify Sans", sans-serif;
+  font-family: "Pixeloid Sans";
   color: white;
 }
 #songName {
-  font-size: 24px;
-  position: absolute;
-  top: -15px;
-  left: 10px;
-}
-#artist {
-  font-size: 16px;
-  position: absolute;
-  top: 17px;
-  left: 10px;
-}
-#time {
-  font-size: 22px;
+  font-size: 17px;
   position: absolute;
   top: -4px;
-  right: 10px;
+  left: 5px;
+}
+#artist {
+  font-size: 11px;
+  position: absolute;
+  top: 26px;
+  left: 5px;
+}
+#time {
+  font-size: 17px;
+  position: absolute;
+  top: 5px;
+  right: 4px;
 }
